# MLservice

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  build.sh  docker-compose.dev.yaml  docker-compose.tpot.yml  docker-compose.yaml  run.sh
backend/: .dockerignore  Dockerfile  Dockerfile.tpot  docker-entrypoint.sh  entrypoints.sh  pyproject.toml  requirements-tpot.txt  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_user_file.py  003_add_model_artifact.py  004_add_dataset_and_training_run.py  (+4 more)
backend/service/: container.py  main.py  settings.py
backend/tests/: test_dataset_ttl_cleanup.py  test_file_presigned_url.py  test_jobs_integration.py  test_minio_storage.py  test_ml_api_datasets.py  test_ml_api_delete_artifact.py  test_ml_api_delete_dataset.py  test_ml_api_metrics_summary.py  test_ml_api_metrics_trends.py  test_ml_api_upload.py  test_ml_api_upload_negative.py  test_profile_api.py  test_profile_service_cache.py  test_search_space.py  test_search_space_conversion_fallback.py  test_tpot_search_space.py  test_tpot_smoke_local.py  test_tpot_trainer_build_estimator.py  test_tpot_trainer_emulated_fit.py  test_tpot_trainer_train_integration.py  test_training_service.py  test_training_service_automl_integration.py  test_training_service_heavy_optional.py  test_training_service_retention.py
backend/tools/: container_run_smoke.sh  tpot_trainer_smoke.py  tpot_trainer_smoke_distributed.py  tpot_trainer_smoke_distributed_minimal.py  tpot_trainer_smoke_minimal_local.py
(+339 files in other folders)
