[project]
name = "forgeincellcorp"
version = "1.4.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.11.7,<3.0.0",
    "fastapi>=0.116.1,<0.117.0",
    "fastapi[standard]>=0.116.1,<0.117.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pyjwt>=2.10.1,<3.0.0",
    "uvicorn>=0.35.0,<0.36.0",
    "python-dotenv>=0.9.9,<2.0.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "alembic>=1.16.4,<2.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "argon2-cffi>=25.1.0,<26.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "joblib>=1.4.0,<2.0.0",
    "ConfigSpace>=1.1.1,<2.0.0",
    "dask[distributed]>=2024.3.0,<2025",
    "httpx>=0.27.0,<0.28.0",
    "minio>=7.2.0,<8.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "redis>=5.0.1,<6.0.0",
    "tpot[sklearnex]>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | migrations
    | migration
    | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
]
